--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f190864708.js" crossorigin="anonymous"></script>
     <title>Your Name</title>
   </head>
   <body>
@@ -45,3 +46,4 @@
     </footer>
   </body>
 </html>
+
