--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
     <section>
     <h3>Leadership and Experience</h3>
         <dl>
-            <dt><a href="https://www.ally.com">Data Science Intern at Ally Bank</a></dt><dd>May-July 2023<dd>
-            <dt>Annotator/Programmer at DataAnnotation</dt><dd>February 2024-Current</dd>
+            <dt><a href="https://www.ally.com">Data Science Intern at Ally Bank</a></dt>
+            <dd>May-July 2023</dd>
+            <dt>Annotator/Programmer at DataAnnotation</dt>
+            <dd>February 2024-Current</dd>
         </dl>
     </section>
     <section>
@@ -98,4 +100,3 @@
     </footer>    
   </body>
 </html>
-
