--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f190864708.js" crossorigin="anonymous"></script>
-    <title>Your Name</title>
+    <title>Adarsh Rajendran</title>
   </head>
   <body>
     <nav>
@@ -100,5 +100,6 @@
     </footer>    
   </body>
 </html>
+
 
 
